# Storage-service

s3-compat/: Cargo.toml
s3-compat/src/: main.rs
server/: Cargo.toml
server/src/: lib.rs
