[package]
name = "s3-compat"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread"] }
hyper = "0.14"
s3s = "0.1"
aws-sigv4 = "1.3"
quick-xml = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
tracing = "0.1"
async-trait = "0.1"
